<resources>
    <string name="app_name">Blog</string>
    <string name="logo_for_login_page">Logo for Login Page</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login_to_account">Login to Account</string>
    <string name="registration">Join us</string>
    <string name="actionSearchText">Search</string>
    <string name="actionSettingText">Account Settings</string>
    <string name="actionLogoutText">Logout</string>
    <string name="regBtnText">Create new account</string>
    <string name="regLoginText">Already have an Account?</string>
    <string name="regPasswordText">Enter Password</string>
    <string name="regConfirmPassword">Confirm Password</string>
    <string name="setupNameHint">Your Name</string>
    <string name="setupBtnNameText">Save Account Settings</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="PostDescriptionHint">Add Description</string>
    <string name="newPostBtnHint">Post</string>
    <string name="bottomHomeText">Home</string>
    <string name="buttomNotificationText">Notification</string>
    <string name="buttomAccontText">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="commentLabelTitle">Coments:</string>
    <string name="deleteButtonTitle">Delete</string>
    <string name="usernameFieldTitle">Username</string>
    <string name="postTextField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="likesCountField">0 Likes</string>
    <string name="commentsCountField">0 Comments</string>
    <string name="accountUsernameText">Username</string>
    <string name="accountPostsCount">0 Posts</string>
</resources>
